Fixed code styles so that it does not break on FF 3.6

--- a/content/media/css/site.less
+++ b/content/media/css/site.less
@@ -168,6 +168,10 @@ footer{
     }
 }
 
+.codebox{
+    margin-bottom: 12px;
+}
+
 .code{
     position: relative;
 
